# uw-performance-eval

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  compose.yaml  manage.py  pyproject.toml  requirements.txt
.skills/architecture-first/: SKILL.md
app/: admin.py  apps.py  evaluation_templates.py  exports.py  forms.py  models.py  roles.py  template_schema.py  tests.py  views.py
app/migrations/: 0001_initial.py  0002_create_role_groups.py  0003_evaluation_templates.py  0004_mid_term_template.py
app/static/app/: admin.css  styles.css
config/: settings.py  urls.py
docker/: entrypoint.sh
docs/: Architecture.md  Requirements.md
templates/: base.html
templates/admin/: base_site.html
templates/app/: dashboard.html  evaluation_form.html  evaluation_list.html  evaluation_preview.html  field.html  no_role.html  pagination.html  template_select.html  vp_dashboard.html
templates/registration/: login.html
