[project]
name = "uw-performance-eval"
version = "0.1.0"
description = "Django app for UW co-op performance evaluations."
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "gunicorn>=23.0,<24.0",
    "whitenoise>=6.9,<7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-django>=4.9,<5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
